# LocalTrip

./: README.md
aiService/: .env.example  .gitignore  API_test.postman_collection.json  README.md  app.py  data_importer.py  interface.py  pyproject.toml  requirements.txt
aiService/class_mod/: rest_qdrant.py
aiService/utils/: llm_caller.py
