[project]
name = "aiservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "certifi>=2025.8.3",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "openai==1.3.7",
    "pillow==10.1.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "qdrant-client==1.6.9",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "sentence-transformers>=5.1.0",
    "typing-extensions==4.8.0",
    "uvicorn[standard]==0.24.0",
    "youtube-transcript-api==1.2.2",
]
